[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/noci.png" type="Texture" id=1]
[ext_resource path="res://scripts/powerup.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[node name="Powerup" type="KinematicBody2D" groups=[
"powerups",
]]
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.25098, 0.25098, 0.25098, 1 )
scale = Vector2( 0.469, 0.469 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DebugLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2.38419e-07, 1.43051e-06 )
scale = Vector2( 1.6, 1.6 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
